Refactor menu structure in index.html to enhance functionality and organization, adding file input and playback options with speed controls.

--- a/index.html
+++ b/index.html
@@ -15,13 +15,35 @@
 
         </div>
         <div class="menu-bar">
-            <div class="menu">Open</div>
-            <div class="menu">Playback</div>
-            <div class="menu">Audio</div>
+            <div class="menu">
+                <div class="menu-btn" id="openfile">Open</div>
+                <input type="file" name="videos" id="videoinput">
+
+            </div>
+            <div class="menu">
+                <div class="menu-btn">Playback</div>
+                <ul class="menu-item">
+                    <li id="speedUp">Speed Up</li>
+                    <li id="speedDown">Speed Down</li>
+                </ul>
+            </div>
+            <div class="menu">
+                <div class="menu-btn">Audio</div>
+                <ul class="menu-item">
+                    <li>Volume UP</li>
+                    <li>Volume Down</li>
+                </ul>
+
+            </div>
         </div>
     </header>
-    <main></main>
-    <footer></footer>
+    <main id="main">
+       
+    </main>
+    <footer>
+
+    </footer>
+    <script src="script.js"></script>
     
 </body>
 </html>
