Add playback controls to index.html and implement play/pause functionality in script.js, enhancing video player interactivity and user experience.

--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
        
     </main>
     <footer>
+        <div id="controls">
+            <button id="play">Play</button>
+            <button id="pause">Pause</button>
+            <div id="playbackBox"></div>
+
+        </div>
 
     </footer>
     <script src="script.js"></script>
