Add volume control icons and implement volume mute functionality; enhance seek bar and time display features

--- a/index.html
+++ b/index.html
@@ -45,11 +45,9 @@
         <span id="current-time">00:00:00</span>/<span id="total-time">00:00:00</span>
         <input type="range" name="seek-bar" id="seek-bar" value="0" max="100" step="0.1"/>
         <i class="fa-solid fa-expand" id="fullScreen"></i>
-        <!-- <i class="fa-solid fa-volume-xmark"></i> -->
-        <i class="fa-solid fa-volume-high"></i>
-
+        <i class="fa-solid fa-volume-high" id="volume-icon"></i>
+        <i class="fa-solid fa-volume-xmark" id="mute-icon"></i>
         <div id="playbackBox"></div>
-
       </div>
     </footer>
     <script src="script.js"></script>
